* change updateTime type to String * add unit tests